data/derived/fa15/progs/unify/prog2894.ml.out
Characters 83-85:
  | hd:: tail -> (listReverse tail) @ hd;;
                                      ^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
